# pkru-safe-allocator-helper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  allocator.sln
allocator/: CMakeLists.txt  allocator.vcxproj
allocator/cmake/: has_mpk.c
allocator/include/: CMakeLists.txt  freelist.hpp  freelist_node.hpp  internal_arena.hpp  internal_arena_allocator.hpp  mpk.h  safemap.h  utilities.hpp  vma.hpp
allocator/main/: CMakeLists.txt  main.cpp
allocator/src/: CMakeLists.txt  freelist.cpp  freelist_node.cpp  internal_arena.cpp  mpk.cpp  safemap.cpp  utilities.cpp  vma.cpp
allocator/tests/: CMakeLists.txt
allocator/tests/testsafemap/: CMakeLists.txt  freelist_test.cpp  main.cpp  vma_test.cpp
